--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
             <!-- =============search============ -->
             <div id="search">
-
                 <i class="ti-search"></i>
             </div>
 
@@ -44,6 +43,10 @@
 
 
         <div id="slider">
+            <div class="text">
+                <h3>Chicago</h3>
+                <p> We had the best time playing at Venice Beach!</p>
+            </div>
 
         </div>
 
@@ -57,9 +60,7 @@
 
     </div>
 
-    <p>
-        Test code hello world
-    </p>
+
 </body>
 
 </html>
